--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
 
 env:
     matrix: 
-        - JULIAVERSION="juliareleases" 
+      # - JULIAVERSION="juliareleases" 
         - JULIAVERSION="julianightlies" 
 
 before_install:
